consumiendo la api

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      /* Aplica un borde redondeado de 50% para hacer un círculo */
+      .rounded-icon {
+        border-radius: 50%;
+      }
+    </style>
 
-    <link rel="icon" href="/src/assets/img/programacion.png" type="image/x-icon">
+    <link class="rounded-icon" rel="icon" href="/src/assets/img/B_Icon.png" > 
     
     <script src="https://kit.fontawesome.com/08a884dddc.js" crossorigin="anonymous"></script>
     <title>PersonalWebsite</title>
