--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link class="rounded-icon" rel="icon" href="/src/assets/img/B_Icon.png" > 
     
     <script src="https://kit.fontawesome.com/08a884dddc.js" crossorigin="anonymous"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>PersonalWebsite</title>
   </head>
   <body>
