--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://kit.fontawesome.com/08a884dddc.js" crossorigin="anonymous"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>PersonalWebsite</title>
+    <title>BrayanGarzón</title>
   </head>
   <body>
     <div id="app"></div>
